force-app/main/default/objects/Weather_Report_Log__c/Weather_Report_Log__c.object-meta.xml
<CustomObject>
    <description>Captures REST API Callout Information</description>
    <label>Weather Report Log</label>
    <nameField>
        <displayFormat>RC-{0000}</displayFormat>
        <label>Weather Report Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Weather Report Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>