force-app/main/default/objects/Weather_Report_Log__c/listViews/Weather_Report_log_details.listView-meta.xml
<ListView>
    <fullName>Weather_Report_log_details</fullName>
    <columns>NAME</columns>
    <columns>Response_Code__c</columns>
    <columns>Response_Message__c</columns>
    <columns>Latitude__c</columns>
    <columns>Longitude__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Mine</filterScope>
    <label>Weather Report log details</label>
</ListView>